--- a/package.json
+++ b/package.json
@@ -9,23 +9,27 @@
     "not dead"
   ],
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "autoprefixer": "^9.8.5",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "autoprefixer": "^10.0.1",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
-    "browser-sync": "^2.26.12",
+    "browser-sync": "^2.26.13",
     "core-js": "^3.6.5",
+    "css-mqpacker": "^7.0.0",
     "gulp": "^4.0.2",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
-    "postcss-csso": "^4.0.0",
-    "postcss-import": "^12.0.1",
+    "postcss": "^8.1.3",
+    "postcss-csso": "^5.0.0",
+    "postcss-import": "^13.0.0",
     "postcss-media-minmax": "^4.0.0",
-    "webpack": "^4.44.0",
-    "webpack-stream": "^5.2.1",
-    "css-mqpacker": "^7.0.0"
+    "webpack": "^5.2.0",
+    "webpack-stream": "^6.1.0"
+  },
+  "peerDependencies": {
+    "postcss": "^8.1.3"
   }
 }
